vendor/cache/ruby/2.6.0/extensions/x86_64-darwin-18/2.6.0/json-1.8.3/gem_make.out
current directory: /Users/maxime/Dropbox/msaintemarie/vendor/cache/ruby/2.6.0/gems/json-1.8.3/ext/json/ext/generator
/usr/local/opt/ruby/bin/ruby -I /usr/local/lib/ruby/site_ruby/2.6.0 -r ./siteconf20190819-87309-7dcl0h.rb extconf.rb
creating Makefile

current directory: /Users/maxime/Dropbox/msaintemarie/vendor/cache/ruby/2.6.0/gems/json-1.8.3/ext/json/ext/generator
make "DESTDIR=" clean

current directory: /Users/maxime/Dropbox/msaintemarie/vendor/cache/ruby/2.6.0/gems/json-1.8.3/ext/json/ext/generator
make "DESTDIR="
compiling generator.c
generator.c:861:25: error: use of undeclared identifier 'rb_cFixnum'
    } else if (klass == rb_cFixnum) {
                        ^
generator.c:863:25: error: use of undeclared identifier 'rb_cBignum'
    } else if (klass == rb_cBignum) {
                        ^
2 errors generated.
make: *** [generator.o] Error 1

make failed, exit code 2
